# MetaBCI

./: .gitignore  .readthedocs.yaml  Online_ssvep.py  README.md  README.zh-cn.md  README_old_version.md  detect_cr5xiugai.py  environment.yml  log.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  install-test.yml  lint.yml  release.yml
DepressionDetection/: classification.py  dataset.py  feature_extraction.py  main.py  preprocessing.py
MetaBCI-master/MetaBCI-master/: README.md
brainda/datasets/: __init__.py  alex_mi.py  base.py  bnci.py  cbcic.py  cho2017.py  gigadb.py  munich2009.py  nakanishi2015.py  physionet.py  schirrmeister2017.py  tsinghua.py  tunerl.py  zhou2016.py
brainda/paradigms/: __init__.py  base.py  p300.py  ssvep.py
brainda/utils/: __init__.py  channels.py  download.py  performance.py
demos/: CWT.py  DCPM.py  DisComNet.py  FBCCA.py  FBCSP.py  FBMsCCA.py  FBTDCA.py  FBTRCA.py  FBeCCA.py  FBmultiCSP.py  FeatureEngineeringTesting.py  LDA.py  LST+FBTRCA.py  LST.py  MDRM.py  MEKT.py  P300_demo.py  PLV.py  RPA.py  SAME.py  SEntropy.py  TRCANet.py  addtest.py  deep_learning.py  eTRCA.py  msSAME_TDCA.py  msSAME_eTRCA.py  performance_demo.py  pig.py  pretraining.py  sceTRCA.py  ssvep_demo.py  ssvep_experiment_demo_线下验证.py
demos/SA-xTRCA_demo/: SA-xTRCA.py  test.py
demos/brainflow_demos/: FES.py  MIndBridge.py  MIprocess_Online.py  Offline_competition.py  Offline_mi.py  Offline_p300.py  Offline_ssvep.py  Online_HT.py  Online_competition.py  Online_mi.py  Online_mi_FES.py  Online_mi_nc.py  Online_mi_t_neuracle.py  Online_mi_tff.py  Online_p300.py  Online_ssvep.py  Online_ssvep_neuracle.py  TffModel.py  USTChopin_Offline.py  USTChopin_Offline_Atten.py  USTChopin_Online.py  datasets.py  main.py  matdataset.py  offline_mi_t.py  online_experiment_demo_and_dataSaveing.py  online_feedback_and_mouse_control.py  test.csv  tester.py
demos/braingui_demos/: app.py
demos/brainstim_demos/: BaseClass.py  Blank_stim.py  ReadMe.txt  app_test.py  (+24 more)
docs/: brainda.algorithms.deep_learning.rst  brainda.algorithms.transfer_learning.rst  brainda.utils.rst  conf.py  make.bat  modules.rst  requirements.txt
metabci/: __init__.py
metabci.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
psychopy_patch/: pygletbackend.py  window.py
tests/: base_tmpl.py  test_demo.py  test_download.py
(+511 files in other folders)
